# tds-proj-1

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  base.py  constants.py  llm.py  pyproject.toml  utils.py
tools/: phaseA.py  phaseB.py
